# grip-browser

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-17-grip-implementation.md
docs/superpowers/specs/: 2026-05-17-grip-design.md
grip/: __init__.py  browser.py  page.py  runner.py  trace.py
grip/adapters/: anthropic.py  base.py  openai.py
grip/cdp/: engine.py  launcher.py  shadow.py
grip/compression/: cache.py  diff.py  refs.py  summarizer.py
grip/errors/: __init__.py  classifier.py  types.py
grip/security/: injection.py  sanitizer.py
tests/integration/: test_interactions.py  test_real_browser.py
tests/unit/: test_adapters.py  test_browser.py  test_cache.py  test_cdp_engine.py  test_classifier.py  test_diff.py  test_error_types.py  test_injection.py  test_launcher.py  test_macros.py  test_page.py  test_proxy.py  test_public_api.py  test_refs.py  test_runner.py  test_safe_mode.py  test_sanitizer.py  test_session.py  test_shadow.py  test_snapshot_page_error.py  test_summarizer.py  test_trace.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: code-showcase.tsx  comparison.tsx  features.tsx  footer.tsx  hero-visual.tsx  hero.tsx  install.tsx  nav.tsx  token-counter.tsx
web/components/ui/: badge.tsx  button.tsx
