[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grip-browser"
version = "0.1.0"
description = "Token-efficient, CDP-native browser SDK for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["grip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
